NOS fill RBV on AC2 Channel 7 instead of 1 due to use of E2 AC board

--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -180,34 +180,34 @@
 	"ac2.acSupply24Power": "ac2Supply24Power",
 
 	"ac2.actuatorState0": "nosGemsState",
-	"ac2.actuatorState1": "nosFillState",
+	// "ac2.actuatorState1": "nosFillState",
 	// "ac2.actuatorState2": "nosSlowVentState",
 	"ac2.actuatorState3": "nosLineVentState",
 	"ac2.actuatorState4": "nosEmergencyVentState",
 	"ac2.actuatorState5": "nosDrainState",
 	"ac2.actuatorState6": "nosSlowVentState",
-	// "ac2.actuatorState7": "",
+	"ac2.actuatorState7": "nosFillState",
 
 	"ac2.actuatorContinuity0": "nosGemsContinuity",
-	"ac2.actuatorContinuity1": "nosFillContinuity",
+	// "ac2.actuatorContinuity1": "nosFillContinuity",
 	// "ac2.actuatorContinuity2": "nosSlowVentContinuity",
 	"ac2.actuatorContinuity3": "nosLineVentContinuity",
 	"ac2.actuatorContinuity4": "nosEmergencyVentContinuity",
 	"ac2.actuatorContinuity5": "nosDrainContinuity",
 	"ac2.actuatorContinuity6": "nosSlowVentContinuity",
-	// "ac2.actuatorContinuity7": "",
+	"ac2.actuatorContinuity7": "nosFillContinuity",
 
 	"ac2.actuatorCurrent0": "nosGemsCurrent",
-	"ac2.actuatorCurrent1": "nosFillCurrent",
+	// "ac2.actuatorCurrent1": "nosFillCurrent",
 	// "ac2.actuatorCurrent2": "nosSlowVentCurrent",
 	"ac2.actuatorCurrent3": "nosLineVentCurrent",
 	"ac2.actuatorCurrent4": "nosEmergencyVentCurrent",
 	"ac2.actuatorCurrent5": "nosDrainCurrent",
 	"ac2.actuatorCurrent6": "nosSlowVentCurrent",
-	// "ac2.actuatorCurrent7": "",
+	"ac2.actuatorCurrent7": "nosFillCurrent",
 
 	"ac2.potentiometer0": "nosGemsPot",
-	"ac2.potentiometer1": "nosFillPot",
+	// "ac2.potentiometer1": "nosFillPot",
 	// "ac2.potentiometer2": "nosSlowVentPot",
 	"ac2.potentiometer3": "nosLineVentPot",
 	"ac2.potentiometer4": "nosEmergencyVentPot",
