--- a/config/command_map.jsonc
+++ b/config/command_map.jsonc
@@ -30,13 +30,13 @@
 	// AC Board 2
 
 	"nosGems": ["ac2", 100, 0],
-	"nosFill": ["ac2", 100, 1],
+	// "nosFill": ["ac2", 100, 1],
 	// "nosSlowVent": ["ac2", 100, 2],
 	"nosLineVent": ["ac2", 100, 3],
 	"nosEmergencyVent": ["ac2", 100, 4],
 	"nosDrain": ["ac2", 100, 5],
 	"nosSlowVent": ["ac2", 100, 6],
-	// "": ["ac2", 100, 7],
+	"nosFill": ["ac2", 100, 7],
 
 	"nosAutomation": ["ac2", 123, null],
 	"nosAutoventThreshold": ["ac2", 124, null],
