--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -49,7 +49,7 @@
 	"pt1.ptValue2": "mainValvePT",
 	"pt1.ptValue3": "solenoidPanelPT",
 	"pt1.ptValue4": "ipaTankPT",
-	"pt1.ptValue5": "ipaPressPT",
+	// "pt1.ptValue5": "ipaPressPT",
 	// "pt1.ptValue6": "enginePT6",
 	// "pt1.ptValue7": "enginePT7",
 
@@ -270,7 +270,8 @@
 	"ireg.boardConnected": "iregConnected",
 	"ireg.boardKbps": "iregKbps",
 
-	"ireg.filteredUpstreamPressure1": "iregFilteredUpstreamPressure",
+	// "ireg.filteredUpstreamPressure1": "iregFilteredUpstreamPressure",
+	"ireg.filteredUpstreamPressure1": "ipaPressPT",
 	"ireg.filteredUpstreamPressure2": "iregFilteredUpstreamPressure2",
 	"ireg.filteredDownstreamPressure1": "iregFilteredDownstreamPressure",
 	"ireg.filteredDownstreamPressure2": "iregFilteredDownstreamPressure2",
