added TC packets and more

--- a/config/pressures_window.jsonc
+++ b/config/pressures_window.jsonc
@@ -190,7 +190,7 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "iregFilteredUpstreamPressure",
+					"field": "ipaPressPT",
 					"name": "I-Reg Press PT",
 					"units": "PSI",
 					"color": [255, 0, 0]
