--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -8,14 +8,21 @@
 	"tc1.tcSupply24Current": "tc12Supply24Current",
 	"tc1.tcSupply24Power": "tc1Supply24Power",
 
-	"tc1.tcValue0": "nosTankTC",
-	"tc1.tcValue1": "ipaTankTC",
+	// "tc1.tcValue0": "nosTankTC",
+	// "tc1.tcValue1": "ipaTankTC",
+	"tc1.tcValue1": "nosTankTC",
 	"tc1.tcValue2": "nosInjectorTC",
 	"tc1.tcValue3": "ipaInjectorTC",
 	// "tc1.tcValue4": "",
 	// "tc1.tcValue5": "",
 	// "tc1.tcValue6": "",
 	// "tc1.tcValue7": "",
+
+	// "tc1.tcRawVoltage0": "nosTankTCRawVoltage",
+	// "tc1.tcRawVoltage1": "ipaTankTCRawVoltage",
+	"tc1.tcRawVoltage1": "nosTankTCRawVoltage",
+	"tc1.tcRawVoltage2": "nosInjectorTCRawVoltage",
+	"tc1.tcRawVoltage3": "ipaInjectorTCRawVoltage",
 
 	// TC Board 2
 
