--- a/config/controls_window.jsonc
+++ b/config/controls_window.jsonc
@@ -416,23 +416,20 @@
 						"green": [0, 1]
 					},
 					{
-						"id": "launchEnable",
+						"id": "nitrousLaunchEnable",
 						"type": "switch",
-						"name": "Launch Enable",
+						"name": "Nitrous Enable",
 						"field": "",
 						"actions": {
 							"enable": {
 								"type": "enable",
-								"id": "launch"
+								"id": "nitrousEnable"
 							},
 							"disable": {
 								"type": "disable",
-								"id": "launch"
+								"id": "nitrousEnable"
 							}
 						}
-					},
-					{
-						"type": null
 					},
 					{
 						"id": "eregStaticPress",
@@ -450,6 +447,22 @@
 							}
 						},
 						"safe": true
+					},
+					{
+						"id": "ipaLaunchEnable",
+						"type": "switch",
+						"name": "IPA Enable",
+						"field": "",
+						"actions": {
+							"enable": {
+								"type": "enable",
+								"id": "ipaEnable"
+							},
+							"disable": {
+								"type": "disable",
+								"id": "ipaEnable"
+							}
+						}
 					}
 				]
 				
