--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -13,8 +13,8 @@
 	"tc1.tcValue1": "nosTankTC",
 	"tc1.tcValue2": "nosInjectorTC",
 	"tc1.tcValue3": "ipaInjectorTC",
-	// "tc1.tcValue4": "",
-	// "tc1.tcValue5": "",
+	"tc1.tcValue4": "ipaTankTC",
+	"tc1.tcValue5": "heaterTC",
 	// "tc1.tcValue6": "",
 	// "tc1.tcValue7": "",
 
