--- a/config/propellant_fill_window.jsonc
+++ b/config/propellant_fill_window.jsonc
@@ -151,9 +151,15 @@
 					"units": "C",
 					"color": [218, 165, 32]
 				},
+				// {
+				// 	"field": "ipaTankTC",
+				// 	"name": "IPA Tank TC",
+				// 	"units": "C",
+				// 	"color": [30, 144, 255]
+				// }
 				{
-					"field": "ipaTankTC",
-					"name": "IPA Tank TC",
+					"field": "heaterTC",
+					"name": "Heater TC",
 					"units": "C",
 					"color": [30, 144, 255]
 				}
