--- a/config/engine_window.jsonc
+++ b/config/engine_window.jsonc
@@ -119,36 +119,6 @@
 					"name": "Eng PT5",
 					"units": "",
 					"color": [128, 254, 206]
-				},
-				{
-					"field": "enginePT6",
-					"name": "Eng PT6",
-					"units": "",
-					"color": [178, 242, 150]
-				},
-				{
-					"field": "enginePT7",
-					"name": "Eng PT7",
-					"units": "",
-					"color": [230, 205, 115]
-				},
-				{
-					"field": "enginePT8",
-					"name": "Eng PT8",
-					"units": "",
-					"color": [255, 150, 79]
-				},
-				{
-					"field": "enginePT9",
-					"name": "Eng PT9",
-					"units": "",
-					"color": [255, 77, 39]
-				},
-				{
-					"field": "enginePT10",
-					"name": "Eng PT10",
-					"units": "",
-					"color": [255, 77, 39]
 				}
 			]
 		},
@@ -178,30 +148,6 @@
 					"name": "Eng TC3",
 					"units": "",
 					"color": [63, 255, 183]
-				},
-				{
-					"field": "engineTC4",
-					"name": "Eng TC4",
-					"units": "",
-					"color": [183, 255, 63]
-				},
-				{
-					"field": "engineTC5",
-					"name": "Eng TC5",
-					"units": "",
-					"color": [255, 185, 0]
-				},
-				{
-					"field": "engineTC6",
-					"name": "Eng TC6",
-					"units": "",
-					"color": [255, 48, 0]
-				},
-				{
-					"field": "engineTC7",
-					"name": "Eng TC7",
-					"units": "",
-					"color": [127, 0, 255]
 				}
 			]
 		},
@@ -243,46 +189,100 @@
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "nosTankPT",
+				// 	"name": "NOS Tank",
+				// 	"units": "PSI",
+				// 	"color": [218, 165, 32]
+				// },
+				// {
+				// 	"field": "nosFillPT",
+				// 	"name": "Fill",
+				// 	"units": "PSI",
+				// 	"color": [30, 144, 255]
+				// },
+				// {
+				// 	"field": "nosAutoventPressure",
+				// 	"name": "AV",
+				// 	"units": "PSI",
+				// 	"color": [178, 34, 34]
+				// }
 				{
-					"field": "nosTankPT",
-					"name": "NOS Tank",
-					"units": "PSI",
-					"color": [218, 165, 32]
+					"field": "enginePT6",
+					"name": "Eng PT6",
+					"units": "",
+					"color": [178, 242, 150]
 				},
 				{
-					"field": "nosFillPT",
-					"name": "Fill",
-					"units": "PSI",
-					"color": [30, 144, 255]
+					"field": "enginePT7",
+					"name": "Eng PT7",
+					"units": "",
+					"color": [230, 205, 115]
 				},
 				{
-					"field": "nosAutoventPressure",
-					"name": "AV",
-					"units": "PSI",
-					"color": [178, 34, 34]
+					"field": "enginePT8",
+					"name": "Eng PT8",
+					"units": "",
+					"color": [255, 150, 79]
+				},
+				{
+					"field": "enginePT9",
+					"name": "Eng PT9",
+					"units": "",
+					"color": [255, 77, 39]
+				},
+				{
+					"field": "enginePT10",
+					"name": "Eng PT10",
+					"units": "",
+					"color": [255, 77, 39]
 				}
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "ipaTankPT",
+				// 	"name": "IPA Tank",
+				// 	"units": "PSI",
+				// 	"color": [218, 165, 32]
+				// },
+				// {
+				// 	"field": "ipaPressPT",
+				// 	"name": "Press",
+				// 	"units": "PSI",
+				// 	"color": [30, 144, 255]
+				// },
+				// {
+				// 	"field": "ipaAutoventPressure",
+				// 	"name": "AV",
+				// 	"units": "PSI",
+				// 	"color": [178, 34, 34]
+				// }
 				{
-					"field": "ipaTankPT",
-					"name": "IPA Tank",
-					"units": "PSI",
-					"color": [218, 165, 32]
+					"field": "engineTC4",
+					"name": "Eng TC4",
+					"units": "",
+					"color": [183, 255, 63]
 				},
 				{
-					"field": "ipaPressPT",
-					"name": "Press",
-					"units": "PSI",
-					"color": [30, 144, 255]
+					"field": "engineTC5",
+					"name": "Eng TC5",
+					"units": "",
+					"color": [255, 185, 0]
 				},
 				{
-					"field": "ipaAutoventPressure",
-					"name": "AV",
-					"units": "PSI",
-					"color": [178, 34, 34]
+					"field": "engineTC6",
+					"name": "Eng TC6",
+					"units": "",
+					"color": [255, 48, 0]
+				},
+				{
+					"field": "engineTC7",
+					"name": "Eng TC7",
+					"units": "",
+					"color": [255, 0, 0]
 				}
 			]
 		},
