--- a/config/main.jsonc
+++ b/config/main.jsonc
@@ -1,29 +1,25 @@
 {
 	"boards": "$boards.jsonc",
 	"packets": {
-		"ac": "$boards/ac_board.jsonc",
+		// "ac": "$boards/ac_board.jsonc",
 		"pt": "$boards/pt_board.jsonc",
 		"tc": "$boards/tc_board.jsonc",
-		"lc": "$boards/lc_board.jsonc",
-		"ereg": "$boards/ereg_board.jsonc",
-		"flightV4": "$boards/flightV4_board.jsonc",
-		"cap": "$boards/cap_board.jsonc"
+		"lc": "$boards/lc_board.jsonc"
+		// "ereg": "$boards/ereg_board.jsonc",
+		// "flightV4": "$boards/flightV4_board.jsonc",
+		// "cap": "$boards/cap_board.jsonc"
 	},
 	"influxMap": "$influx_map.jsonc",
 	"commandMap": "$command_map.jsonc",
 	"windows": {
 		// "hotfire_controls": "$hotfire_controls_window.jsonc",
-		"controls": "$controls_window.jsonc",
-		// "hotfire_pressures": "$hotfire_pressures_window.jsonc",
-		// "coldflow_controls": "$coldflow_controls_window.jsonc",
-		// "coldflow_pressures": "$coldflow_pressures_window.jsonc",
-		"pressures": "$pressures_window.jsonc",
-		"propellant_fill": "$propellant_fill_window.jsonc",
-		// "coldflow_pressurization": "$coldflow_pressurization_window.jsonc",
-		// "hotfire_pressurization": "$hotfire_pressurization_window.jsonc",
-		"engine": "$engine_window.jsonc",
-		"boards_status": "$boards_status_window.jsonc",
-		"actuators_status": "$actuators_status_window.jsonc"
+		// "controls": "$controls_window.jsonc",
+		// "pressures": "$pressures_window.jsonc",
+		// "propellant_fill": "$propellant_fill_window.jsonc",
+		// "engine": "$engine_window.jsonc",
+		// "boards_status": "$boards_status_window.jsonc",
+		"had": "$had_window.jsonc"
+		// "actuators_status": "$actuators_status_window.jsonc"
 	},
 	"preprocessors": "$preprocessors.jsonc",
 	"burnTime": 7000, //45000, // ms
