--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -77,8 +77,8 @@
 	// "pt2.ptValue5": "channelPT1",
 	// "pt2.ptValue6": "channelPT2",
 	// "pt2.ptValue7": "channelPT3",
-	"pt2.ptValue2": "enginePT0",
-	"pt2.ptValue3": "enginePT1",
+	"pt2.ptValue2": "chamberPT",
+	"pt2.ptValue3": "manifoldPT",
 	"pt2.ptValue4": "enginePT2",
 	"pt2.ptValue5": "enginePT3",
 	"pt2.ptValue6": "enginePT4",
@@ -98,7 +98,7 @@
 	"pt3.ptValue2": "enginePT8",
 	"pt3.ptValue3": "enginePT9",
 	"pt3.ptValue4": "enginePT10",
-	// "pt3.ptValue5": "enginePT11",
+	// "pt3.ptValue5": "manifoldPT1",
 	// "pt3.ptValue6": "enginePT4",
 	// "pt3.ptValue7": "enginePT5",
 
