--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -13,10 +13,10 @@
 	"tc1.tcValue1": "nosTankTC",
 	"tc1.tcValue2": "nosInjectorTC",
 	"tc1.tcValue3": "ipaInjectorTC",
-	// "tc1.tcValue4": "",
-	// "tc1.tcValue5": "",
-	// "tc1.tcValue6": "",
-	// "tc1.tcValue7": "",
+	"tc1.tcValue4": "ipaTankTC",
+	"tc1.tcValue5": "heaterTC",
+	"tc1.tcValue6": "engineTC0",
+	"tc1.tcValue7": "engineTC8",
 
 	// "tc1.tcRawVoltage0": "nosTankTCRawVoltage",
 	// "tc1.tcRawVoltage1": "ipaTankTCRawVoltage",
@@ -33,7 +33,7 @@
 	"tc2.tcSupply24Current": "tc2Supply24Current",
 	"tc2.tcSupply24Power": "tc2Supply24Power",
 
-	"tc2.tcValue0": "engineTC0",
+	// "tc2.tcValue0": "engineTC0",
 	"tc2.tcValue1": "engineTC1",
 	"tc2.tcValue2": "engineTC2",
 	"tc2.tcValue3": "engineTC3",
@@ -70,15 +70,15 @@
 	"pt2.ptSupply24Power": "pt2Supply24Power",
 
 	"pt2.ptValue0": "nosInjectorPT",
-	"pt2.ptValue1": "ipaInjectorPT",
+	// "pt2.ptValue1": "ipaInjectorPT",
 	// "pt2.ptValue2": "chamberPT",
 	// "pt2.ptValue3": "manifoldPT",
 	// "pt2.ptValue4": "channelPT0",
 	// "pt2.ptValue5": "channelPT1",
 	// "pt2.ptValue6": "channelPT2",
 	// "pt2.ptValue7": "channelPT3",
-	"pt2.ptValue2": "enginePT0",
-	"pt2.ptValue3": "enginePT1",
+	"pt2.ptValue2": "chamberPT",
+	"pt2.ptValue3": "manifoldPT",
 	"pt2.ptValue4": "enginePT2",
 	"pt2.ptValue5": "enginePT3",
 	"pt2.ptValue6": "enginePT4",
@@ -93,12 +93,12 @@
 	"pt3.ptSupply24Current": "pt3Supply24Current",
 	"pt3.ptSupply24Power": "pt3Supply24Power",
 
-	"pt3.ptValue0": "enginePT6",
+	"pt3.ptValue0": "ipaInjectorPT", //"enginePT6",
 	"pt3.ptValue1": "enginePT7",
 	"pt3.ptValue2": "enginePT8",
 	"pt3.ptValue3": "enginePT9",
 	"pt3.ptValue4": "enginePT10",
-	// "pt3.ptValue5": "enginePT11",
+	// "pt3.ptValue5": "manifoldPT1",
 	// "pt3.ptValue6": "enginePT4",
 	// "pt3.ptValue7": "enginePT5",
 
