--- a/config/controls_window.jsonc
+++ b/config/controls_window.jsonc
@@ -290,7 +290,8 @@
 							"enable": {
 								"type": "start-pings",
 								"pingId": "nosAuto",
-								"target": "nosAutomation"
+								"target": "nosAutomation",
+								"delay": 1000
 							},
 							"disable": {
 								"type": "stop-pings",
@@ -360,6 +361,20 @@
 					},
 					{
 						"type": null
+					},
+					{
+						"id": "heartbeatEnable",
+						"type": "valve",
+						"name": "Heatbeat Enable",
+						"field": "",
+						"actions": {
+							"enable": {
+								"type": "enable-heartbeat"
+							},
+							"disable": {
+								"type": "disable-heartbeat"
+							}
+						}
 					}//,
 					// {
 					// 	"id": "nitrousEmergencyVent",
@@ -416,23 +431,20 @@
 						"green": [0, 1]
 					},
 					{
-						"id": "launchEnable",
+						"id": "nitrousLaunchEnable",
 						"type": "switch",
-						"name": "Launch Enable",
+						"name": "Nitrous Enable",
 						"field": "",
 						"actions": {
 							"enable": {
 								"type": "enable",
-								"id": "launch"
+								"id": "nitrousEnable"
 							},
 							"disable": {
 								"type": "disable",
-								"id": "launch"
+								"id": "nitrousEnable"
 							}
 						}
-					},
-					{
-						"type": null
 					},
 					{
 						"id": "eregStaticPress",
@@ -450,6 +462,22 @@
 							}
 						},
 						"safe": true
+					},
+					{
+						"id": "ipaLaunchEnable",
+						"type": "switch",
+						"name": "IPA Enable",
+						"field": "",
+						"actions": {
+							"enable": {
+								"type": "enable",
+								"id": "ipaEnable"
+							},
+							"disable": {
+								"type": "disable",
+								"id": "ipaEnable"
+							}
+						}
 					}
 				]
 				
@@ -467,24 +495,24 @@
 				"type": "four-button",
 				"buttons": 
 				[
-					{
-						"id": "ipaDrain",
-						"type": "valve",
-						"name": "IPA Drain",
-						"field": "ipaDrainState",
-						"actions": {
-							"enable": {
-								"type": "on",
-								"target": "ipaDrain"
-							},
-							"disable": {
-								"type": "off",
-								"target": "ipaDrain"
-							}
-						},
-						"green": [0, 1],
-						"safe": true
-					},
+					// {
+					// 	"id": "ipaDrain",
+					// 	"type": "valve",
+					// 	"name": "IPA Drain",
+					// 	"field": "ipaDrainState",
+					// 	"actions": {
+					// 		"enable": {
+					// 			"type": "on",
+					// 			"target": "ipaDrain"
+					// 		},
+					// 		"disable": {
+					// 			"type": "off",
+					// 			"target": "ipaDrain"
+					// 		}
+					// 	},
+					// 	"green": [0, 1],
+					// 	"safe": true
+					// },
 					{
 						"id": "nosDrain",
 						"type": "valve",
@@ -519,6 +547,9 @@
 							}
 						},
 						"green": [0, 1]
+					},
+					{
+						"type": null
 					},
 					{
 						"id": "ipaEmergencyVent",
