--- a/config/pressures_window.jsonc
+++ b/config/pressures_window.jsonc
@@ -9,13 +9,13 @@
 					"field": "nosTankPT",
 					"name": "NOS Tank PT",
 					"units": "PSI",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "nosFillPT",
 					"name": "NOS Fill Line PT",
 					"units": "PSI",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 		
 			]
@@ -27,25 +27,25 @@
 					"field": "ipaTankPT",
 					"name": "IPA Tank PT",
 					"units": "PSI",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "iregFilteredDownstreamPressure2",
 					"name": "I-Reg Tank PT 2",
 					"units": "PSI",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				},
-				{
-					"field": "iregFilteredDownstreamPressure",
-					"name": "I-Reg Tank PT 1",
-					"units": "PSI",
-					"color": [0, 255, 255]
-				},
+				// {
+				// 	"field": "iregFilteredDownstreamPressure",
+				// 	"name": "I-Reg Tank PT 1",
+				// 	"units": "PSI",
+				// 	"color": [0, 255, 255]
+				// },
 				{
 					"field": "iregPressureSetpoint",
 					"name": "Setpoint",
 					"units": "PSI",
-					"color": [0, 0, 255]
+					"color": [178, 34, 34]
 				}
 			]
 		},
@@ -63,8 +63,9 @@
 					"units": "PSI/s"
 				},
 				{
-					"field": null 
-					
+					"field": "solenoidPanelPT",
+					"name": "Solenoids PT",
+					"units": "PSI"
 				},
 				{
 					"field": "nosTankPT", 
@@ -75,8 +76,12 @@
 					"field": "ipaTankPT", 
 					"name": "IPA Tank PT",
 					"units": "PSI"
+				},
+				{
+					"field": "mainValvePT",
+					"name": "Main Valve PT",
+					"units": "PSI"
 				}
-				
 			]
 		},
 		{
@@ -86,13 +91,13 @@
 					"field": "nosInjectorPT",
 					"name": "NOS Injector PT",
 					"units": "PSI",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "ipaInjectorPT",
 					"name": "IPA Injector PT",
 					"units": "PSI",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 		
 			]
@@ -104,13 +109,13 @@
 					"field": "nosInjectorTC",
 					"name": "NOS Injector TC",
 					"units": "C",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "ipaInjectorTC",
 					"name": "IPA Injector TC",
 					"units": "C",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 		
 			]
@@ -119,14 +124,14 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "enginePT0",
-					"name": "Eng PT0",
+					"field": "chamberPT",
+					"name": "Chamber",
 					"units": "PSI",
 					"color": [127, 0, 255]
 				},
 				{
-					"field": "enginePT1",
-					"name": "Eng PT1",
+					"field": "manifoldPT",
+					"name": "Manifold",
 					"units": "",
 					"color": [77, 73, 251]
 				},
@@ -153,7 +158,40 @@
 					"name": "Eng PT5",
 					"units": "",
 					"color": [128, 254, 206]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "ipaPressPT",
+					"name": "I-Reg Press PT",
+					"units": "PSI",
+					"color": [218, 165, 32]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "iregEncoderAngle",
+					"name": "I-Reg Encoder Angle",
+					"units": "Ticks",
+					"color": [218, 165, 32]
 				},
+				{
+					"field": "iregAngleSetpoint",
+					"name": "Setpoint",
+					"units": "Ticks",
+					"color": [30, 144, 255]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
 				{
 					"field": "enginePT6",
 					"name": "Eng PT6",
@@ -180,60 +218,9 @@
 				},
 				{
 					"field": "enginePT10",
-					"name": "Eng PT10",
+					"name": "Eng PT 10",
 					"units": "",
 					"color": [255, 77, 39]
-				}
-			]
-		},
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "ipaPressPT",
-					"name": "I-Reg Press PT",
-					"units": "PSI",
-					"color": [255, 0, 0]
-				}
-			]
-		},
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "iregEncoderAngle",
-					"name": "I-Reg Encoder Angle",
-					"units": "Ticks",
-					"color": [255, 0, 0]
-				},
-				{
-					"field": "iregAngleSetpoint",
-					"name": "Setpoint",
-					"units": "Ticks",
-					"color": [0, 255, 0]
-				}
-			]
-		},
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "manifoldPT",
-					"name": "Manifold",
-					"units": "PSI",
-					"color": [255, 0, 0]
-				},
-				{
-					"field": "mainValvePT",
-					"name": "Main Valve",
-					"units": "PSI",
-					"color": [0, 255, 0]
-				},
-				{
-					"field": "solenoidPanelPT",
-					"name": "Solenoids",
-					"units": "PSI",
-					"color": [0, 0, 255]
 				}
 			]
 		}
