--- a/config/propellant_fill_window.jsonc
+++ b/config/propellant_fill_window.jsonc
@@ -9,19 +9,19 @@
 					"field": "nosTankPT",
 					"name": "NOS Tank",
 					"units": "PSI",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "nosFillPT",
 					"name": "Fill",
 					"units": "PSI",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				},
 				{
 					"field": "nosAutoventPressure",
 					"name": "AV",
 					"units": "PSI",
-					"color": [0, 0, 255]
+					"color": [178, 34, 34]
 				}
 			]
 		},
@@ -32,19 +32,19 @@
 					"field": "ipaTankPT", // formerly had @linear/2.5,10
 					"name": "IPA Tank",
 					"units": "PSI",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "ipaPressPT",
 					"name": "Press",
 					"units": "PSI",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				},
 				{
 					"field": "ipaAutoventPressure",
 					"name": "AV",
 					"units": "PSI",
-					"color": [0, 0, 255]
+					"color": [178, 34, 34]
 				}
 			]
 		},
@@ -84,13 +84,13 @@
 					"field": "ncapCap",
 					"name": "Nitrous Cap Fill Value",
 					"units": "pF",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "icapCap",
 					"name": "IPA Cap Fill Value",
 					"units": "pF",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 			]
 		},
@@ -101,13 +101,13 @@
 					"field": "iregEncoderAngle",
 					"name": "I-Reg Encoder Angle",
 					"units": "Ticks",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "iregAngleSetpoint",
 					"name": "Setpoint",
 					"units": "Ticks",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 			]
 		},
@@ -149,13 +149,19 @@
 					"field": "nosTankTC",
 					"name": "NOS Tank TC",
 					"units": "C",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
+				// {
+				// 	"field": "ipaTankTC",
+				// 	"name": "IPA Tank TC",
+				// 	"units": "C",
+				// 	"color": [30, 144, 255]
+				// }
 				{
-					"field": "ipaTankTC",
-					"name": "IPA Tank TC",
+					"field": "heaterTC",
+					"name": "Heater TC",
 					"units": "C",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 			]
 		},
@@ -166,13 +172,13 @@
 					"field": "nosTankLC0",
 					"name": "NOS LC",
 					"units": "lbs",
-					"color": [255, 0, 0]
+					"color": [218, 165, 32]
 				},
 				{
 					"field": "ipaTankLC0",
 					"name": "IPA LC",
 					"units": "lbs",
-					"color": [0, 255, 0]
+					"color": [30, 144, 255]
 				}
 			]
 		},
