--- a/config/pressures_window.jsonc
+++ b/config/pressures_window.jsonc
@@ -63,9 +63,8 @@
 					"units": "PSI/s"
 				},
 				{
-					"field": "solenoidPanelPT",
-					"name": "Solenoids PT",
-					"units": "PSI"
+					"field": null 
+					
 				},
 				{
 					"field": "nosTankPT", 
@@ -76,12 +75,8 @@
 					"field": "ipaTankPT", 
 					"name": "IPA Tank PT",
 					"units": "PSI"
-				},
-				{
-					"field": "mainValvePT",
-					"name": "Main Valve PT",
-					"units": "PSI"
 				}
+				
 			]
 		},
 		{
@@ -124,14 +119,14 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "chamberPT",
-					"name": "Chamber",
+					"field": "enginePT0",
+					"name": "Eng PT0",
 					"units": "PSI",
 					"color": [127, 0, 255]
 				},
 				{
-					"field": "manifoldPT",
-					"name": "Manifold",
+					"field": "enginePT1",
+					"name": "Eng PT1",
 					"units": "",
 					"color": [77, 73, 251]
 				},
@@ -158,6 +153,36 @@
 					"name": "Eng PT5",
 					"units": "",
 					"color": [128, 254, 206]
+				},
+				{
+					"field": "enginePT6",
+					"name": "Eng PT6",
+					"units": "",
+					"color": [178, 242, 150]
+				},
+				{
+					"field": "enginePT7",
+					"name": "Eng PT7",
+					"units": "",
+					"color": [230, 205, 115]
+				},
+				{
+					"field": "enginePT8",
+					"name": "Eng PT8",
+					"units": "",
+					"color": [255, 150, 79]
+				},
+				{
+					"field": "enginePT9",
+					"name": "Eng PT9",
+					"units": "",
+					"color": [255, 77, 39]
+				},
+				{
+					"field": "enginePT10",
+					"name": "Eng PT10",
+					"units": "",
+					"color": [255, 77, 39]
 				}
 			]
 		},
@@ -193,34 +218,22 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "enginePT6",
-					"name": "Eng PT6",
-					"units": "",
-					"color": [178, 242, 150]
+					"field": "manifoldPT",
+					"name": "Manifold",
+					"units": "PSI",
+					"color": [218, 165, 32]
 				},
 				{
-					"field": "enginePT7",
-					"name": "Eng PT7",
-					"units": "",
-					"color": [230, 205, 115]
+					"field": "mainValvePT",
+					"name": "Main Valve",
+					"units": "PSI",
+					"color": [30, 144, 255]
 				},
 				{
-					"field": "enginePT8",
-					"name": "Eng PT8",
-					"units": "",
-					"color": [255, 150, 79]
-				},
-				{
-					"field": "enginePT9",
-					"name": "Eng PT9",
-					"units": "",
-					"color": [255, 77, 39]
-				},
-				{
-					"field": "enginePT10",
-					"name": "Eng PT 10",
-					"units": "",
-					"color": [255, 77, 39]
+					"field": "solenoidPanelPT",
+					"name": "Solenoids",
+					"units": "PSI",
+					"color": [178, 34, 34]
 				}
 			]
 		}
