--- a/config/pressures_window.jsonc
+++ b/config/pressures_window.jsonc
@@ -124,8 +124,8 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "chamberPT",
-					"name": "Chamber",
+					"field": "chamberPT0",
+					"name": "ChamberPT0",
 					"units": "PSI",
 					"color": [127, 0, 255]
 				},
@@ -152,12 +152,6 @@
 					"name": "Eng PT4",
 					"units": "",
 					"color": [76, 242, 206]
-				},
-				{
-					"field": "enginePT5",
-					"name": "Eng PT5",
-					"units": "",
-					"color": [128, 254, 206]
 				}
 			]
 		},
@@ -193,32 +187,32 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "enginePT6",
-					"name": "Eng PT6",
+					"field": "chamberPT1",
+					"name": "ChamberPT1",
 					"units": "",
-					"color": [178, 242, 150]
+					"color": [128, 254, 206]
 				},
 				{
 					"field": "enginePT7",
 					"name": "Eng PT7",
 					"units": "",
-					"color": [230, 205, 115]
+					"color": [178, 242, 150]
 				},
 				{
 					"field": "enginePT8",
 					"name": "Eng PT8",
 					"units": "",
-					"color": [255, 150, 79]
+					"color": [230, 205, 115]
 				},
 				{
 					"field": "enginePT9",
 					"name": "Eng PT9",
 					"units": "",
-					"color": [255, 77, 39]
+					"color": [255, 150, 79] 
 				},
 				{
 					"field": "enginePT10",
-					"name": "Eng PT 10",
+					"name": "Eng PT10",
 					"units": "",
 					"color": [255, 77, 39]
 				}
