--- a/config/e3_vertical/pressures_window.jsonc
+++ b/config/e3_vertical/pressures_window.jsonc
@@ -1,5 +1,5 @@
 {
-	"name": "Coldflow Pressures",
+	"name": "Pressures",
 	"layout": "9-grid",
 	"slots": [
 		{
@@ -17,7 +17,6 @@
 					"units": "PSI",
 					"color": [30, 144, 255]
 				}
-		
 			]
 		},
 		{
@@ -30,20 +29,14 @@
 					"color": [218, 165, 32]
 				},
 				{
-					"field": "iregFilteredDownstreamPressure2",
-					"name": "I-Reg Tank PT 2",
+					"field": "ipaFillPT",
+					"name": "IPA Fill Line PT",
 					"units": "PSI",
 					"color": [30, 144, 255]
 				},
-				// {
-				// 	"field": "iregFilteredDownstreamPressure",
-				// 	"name": "I-Reg Tank PT 1",
-				// 	"units": "PSI",
-				// 	"color": [0, 255, 255]
-				// },
 				{
-					"field": "iregPressureSetpoint",
-					"name": "Setpoint",
+					"field": "ipaUpstreamPT",
+					"name": "Upstream",
 					"units": "PSI",
 					"color": [178, 34, 34]
 				}
@@ -53,12 +46,12 @@
 			"type": "six-square",
 			"values": [
 				{
-					"field": "nosTankPT@roc", //don't know if works yet 
+					"field": "nosTankPT@roc",
 					"name": "NOS Tank RoC",
 					"units": "PSI/s"
 				},
 				{
-					"field": "ipaTankPT@roc", //same
+					"field": "ipaTankPT@roc",
 					"name": "IPA Tank RoC",
 					"units": "PSI/s"
 				},
@@ -106,61 +99,25 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "nosInjectorTC",
-					"name": "NOS Injector TC",
-					"units": "C",
+					"field": "nosTankPT",
+					"name": "NOS Tank PT",
+					"units": "PSI",
 					"color": [218, 165, 32]
 				},
 				{
-					"field": "ipaInjectorTC",
-					"name": "IPA Injector TC",
-					"units": "C",
+					"field": "eregFilteredDownstreamPressure2",
+					"name": "NOS Tank PT (E-Reg)",
+					"units": "PSI",
 					"color": [30, 144, 255]
 				}
-		
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
 				{
-					"field": "chamberPT0",
-					"name": "ChamberPT0",
-					"units": "PSI",
-					"color": [127, 0, 255]
-				},
-				{
-					"field": "manifoldPT",
-					"name": "Manifold",
-					"units": "",
-					"color": [77, 73, 251]
-				},
-				{
-					"field": "enginePT2",
-					"name": "Eng PT2",
-					"units": "",
-					"color": [25, 149, 242]
-				},
-				{
-					"field": "enginePT3",
-					"name": "Eng PT3",
-					"units": "",
-					"color": [24, 205, 227]
-				},
-				{
-					"field": "enginePT4",
-					"name": "Eng PT4",
-					"units": "",
-					"color": [76, 242, 206]
-				}
-			]
-		},
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "ipaPressPT",
-					"name": "I-Reg Press PT",
+					"field": "differentialTansmitter",
+					"name": "Differential Tansmitter",
 					"units": "PSI",
 					"color": [218, 165, 32]
 				}
@@ -170,13 +127,24 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "iregEncoderAngle",
-					"name": "I-Reg Encoder Angle",
+					"field": "eregPressPT",
+					"name": "E-Reg Press PT",
+					"units": "PSI",
+					"color": [218, 165, 32]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "eregEncoderAngle",
+					"name": "E-Reg Encoder Angle",
 					"units": "Ticks",
 					"color": [218, 165, 32]
 				},
 				{
-					"field": "iregAngleSetpoint",
+					"field": "eregAngleSetpoint",
 					"name": "Setpoint",
 					"units": "Ticks",
 					"color": [30, 144, 255]
@@ -184,40 +152,7 @@
 			]
 		},
 		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "chamberPT1",
-					"name": "ChamberPT1",
-					"units": "",
-					"color": [128, 254, 206]
-				},
-				{
-					"field": "enginePT7",
-					"name": "Eng PT7",
-					"units": "",
-					"color": [178, 242, 150]
-				},
-				{
-					"field": "enginePT8",
-					"name": "Eng PT8",
-					"units": "",
-					"color": [230, 205, 115]
-				},
-				{
-					"field": "enginePT9",
-					"name": "Eng PT9",
-					"units": "",
-					"color": [255, 150, 79] 
-				},
-				{
-					"field": "enginePT10",
-					"name": "Eng PT10",
-					"units": "",
-					"color": [255, 77, 39]
-				}
-			]
+			"type": "empty"
 		}
-		
 	]
 }
